--- a/api/pom.xml
+++ b/api/pom.xml
@@ -10,6 +10,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin</artifactId>
             <version>5.6.3</version>
@@ -23,7 +28,9 @@
     </properties>
 
     <build>
-        <finalName>apiTropBien</finalName>
+        <finalName>
+            api-monsters
+        </finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -33,11 +40,11 @@
                     <transformers>
                         <transformer
                                 implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>heig/dai/http/api/Main.java</mainClass> <!-- Here you should put the main class of your application -->
+                            <mainClass>heig.dai.http.api.Main</mainClass>
                         </transformer>
                     </transformers>
                     <filters>
-                        <filter> <!-- This filter is needed to avoid a bug in the shade plugin -->
+                        <filter>
                             <artifact>*:*</artifact>
                             <excludes>
                                 <exclude>META-INF/*.SF</exclude>
