--- a/api/pom.xml
+++ b/api/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>javalin</artifactId>
             <version>5.6.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
