--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,32 @@
 version: '3'
 services:
+
   nginx:
     build: ./nginx_server
     image: nginx:stable
-    ports:
-      - "8080:80"
+    expose:
+      - "8080"
     volumes:
       - ./nginx_server/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./nginx_server/website/troweld-html:/var/www/html
+    labels:
+      - traefik.http.routers.my-container.rule=Host(`localhost`)
 
   api:
     build: ./api
+    expose:
+      - "7000"
+    labels:
+      - traefik.http.routers.my-container.rule=Host(`localhost/api`)
+
+
+  reverse-proxy:
+    image: traefik:v2.10
+    command: --providers.docker
+             --api.dashboard=true
+             --api.insecure=true
     ports:
-      - "7000:7000"
+      - "80:80"
+      - "7080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
