--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,22 @@
 version: '3'
 services:
-
-  nginx:
-    build: ./nginx_server
-    image: nginx:stable
-    expose:
-      - "8080"
-    volumes:
-      - ./nginx_server/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx_server/website/troweld-html:/var/www/html
-    labels:
-      - traefik.http.routers.my-container.rule=Host(`localhost`)
-
   api:
     build: ./api
     expose:
       - "7000"
     labels:
-      - traefik.http.routers.my-container.rule=Host(`localhost/api`)
+      - traefik.http.routers.api.rule=Host(`localhost`) && PathPrefix(`/api`)
+
+  nginx:
+    build: ./nginx_server
+    image: nginx:stable
+    expose:
+      - "80"
+    volumes:
+      - ./nginx_server/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx_server/website/troweld-html:/var/www/html
+    labels:
+      - traefik.http.routers.nginx.rule=Host(`localhost`)
 
 
   reverse-proxy:
@@ -27,7 +26,4 @@ services:
              --api.insecure=true
     ports:
       - "80:80"
-      - "7080:8080"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-  
+      - "8080:8080"
