--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,29 @@ version: '3'
 services:
   api:
     build: ./api
-
-    expose:
-      - "7000"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.api.rule=Host(`localhost`) && PathPrefix(`/api`)"
+      - "traefik.http.services.api.loadbalancer.sticky.cookie=true"
+      - "traefik.http.services.api.loadbalancer.sticky.cookie.name=monsterious_cookie"
+      - "traefik.http.routers.api.entrypoints=https, http"
+      - "traefik.http.routers.api.tls=true"
+
+    deploy:
+      replicas: 2
 
   nginx:
     build: ./nginx_server
     image: nginx:stable
-    expose:
-      - "80"
     volumes:
       - ./nginx_server/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./nginx_server/website/troweld-html:/var/www/html
     labels:
       - "traefik.http.routers.nginx.rule=Host(`localhost`)"
-
+      - "traefik.http.routers.nginx.entrypoints=https, http"
+      - "traefik.http.routers.nginx.tls=true"
+    deploy:
+      replicas: 2
 
   reverse-proxy:
     image: traefik:v2.10
@@ -28,7 +33,9 @@ services:
              --api.insecure=true
     ports:
       - "80:80"
-      - "8080:8080"
-      -
+      - "443:443"
+
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./https:/etc/traefik/certificates
+      - ./traefik.yaml:/etc/traefik/traefik.yaml
