Added the certificates to the github (hopefully it's okay since they're only used in localhost)

--- a/nginx_server/nginx.conf
+++ b/nginx_server/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name vaches.ch;
+    server_name monsterhunterctropbien.ch;
     root /var/www/html;
 
     location / {
