--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "traefik.http.routers.api.rule=Host(`localhost`) && PathPrefix(`/api`)"
       - "traefik.http.services.api.loadbalancer.sticky.cookie=true"
       - "traefik.http.services.api.loadbalancer.sticky.cookie.name=monsterious_cookie"
-      - "traefik.http.routers.api.entrypoints=https, http"
+      - "traefik.http.routers.api.entrypoints=https"
       - "traefik.http.routers.api.tls=true"
 
     deploy:
@@ -17,10 +17,10 @@ services:
     image: nginx:stable
     volumes:
       - ./nginx_server/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx_server/website/troweld-html:/var/www/html
+      - ./nginx_server/website/MHApi:/var/www/html
     labels:
       - "traefik.http.routers.nginx.rule=Host(`localhost`)"
-      - "traefik.http.routers.nginx.entrypoints=https, http"
+      - "traefik.http.routers.nginx.entrypoints=https"
       - "traefik.http.routers.nginx.tls=true"
     deploy:
       replicas: 2
@@ -39,3 +39,15 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./https:/etc/traefik/certificates
       - ./traefik.yaml:/etc/traefik/traefik.yaml
+
+  portainer:
+    image: portainer/portainer-ce
+    ports:
+      - "9443:9443"
+    volumes:
+      - data:/data
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+
+volumes:
+  data:
